--- a/WebGame/Views/_ViewImports.cshtml
+++ b/WebGame/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using WebGame
-@namespace WebGame.Pages
+﻿@using WebGame
+@using WebGame.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
