--- a/WebGame/Views/Home/Index.cshtml
+++ b/WebGame/Views/Home/Index.cshtml
@@ -1,8 +1,10 @@
-﻿@{
+﻿@model IndexModel
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Go Away</h1>
+    <h1 class="display-4">Go Away - @Model.externalId</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
