--- a/WebGame/Views/Home/Index.cshtml
+++ b/WebGame/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 
 <script src="~/lib/qrcode-generator/qrcode.min.js"></script>
 <div class="text-center">
-    <h1 class="display-4">Go Away - @Model.externalId</h1>
+    <h1 class="display-4">Room ID is @Model.externalId</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
     <div id="qr"></div>
 </div>
