--- a/WebGame/Views/Home/Index.cshtml
+++ b/WebGame/Views/Home/Index.cshtml
@@ -9,11 +9,11 @@
     <h1 class="display-4">Room ID is @Model.ExternalId</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
     <div id="qr"></div>
+    <a href="@Model.QrUrl">@Model.QrUrl</a>
 </div>
 <script>
-    alert("@Model.Thing1");
     var qr = qrcode("0", "M");
-    qr.addData("http://www.geekologie.com");
+    qr.addData("@Model.QrUrl");
     qr.make();
 
     document.getElementById('qr').innerHTML = qr.createSvgTag(20);
