--- a/WebGame/Views/Home/Room.cshtml
+++ b/WebGame/Views/Home/Room.cshtml
@@ -23,8 +23,12 @@
         $(function () {
             let roomInfo = $('#roomInfo');
 
-            repeatedlyCheck("@Model.RoomInfoUrl", 2000, function (data) {
+            repeatedlyCheck("@Model.PregameUrl", 2000, function (data) {
                 roomInfo.text(data);
+                let jsonData = JSON.parse(data);
+                if (jsonData.GameStarted) {
+                    location.href = '@Url.Action("BeginGame", "Home", new { roomId = Model.RoomId } )';
+                }
             })
         });
     </script>
