--- a/WebGame/Views/Home/Player.cshtml
+++ b/WebGame/Views/Home/Player.cshtml
@@ -22,5 +22,5 @@
         var pregameUrl = '@Model.PregameUrl';
         var gameStartedUrl = '@Url.Action("GameStarted", "Home" )';
     </script>
-    <script src="~/js/PlayerView.js"></script>
+    <script src="~/js/Generated/Home/Player.js"></script>
 }
