--- a/WebGame/Views/Home/Room.cshtml
+++ b/WebGame/Views/Home/Room.cshtml
@@ -4,7 +4,6 @@
     ViewData["Title"] = "Home Page";
 }
 
-<script src="~/lib/qrcode-generator/qrcode.min.js"></script>
 <div class="text-center">
     <div id="qr"></div>
     <a href="@Model.QrUrl">@Model.QrUrl</a>
@@ -14,22 +13,8 @@
 
 @section Scripts {
     <script>
-        var qr = qrcode("0", "M");
-        qr.addData("@Model.QrUrl");
-        qr.make();
-
-        document.getElementById('qr').innerHTML = qr.createSvgTag(10);
-
-        $(function () {
-            let roomInfo = $('#roomInfo');
-
-            repeatedlyCheck("@Model.PregameUrl", 2000, function (data) {
-                roomInfo.text(data);
-                let jsonData = JSON.parse(data);
-                if (jsonData.GameStarted) {
-                    location.href = '@Url.Action("GameStarted", "Home" )';
-                }
-            })
-        });
+        var qrUrl = '@Model.QrUrl';
     </script>
+    <script src="~/lib/qrcode-generator/qrcode.min.js"></script>
+    <script src="~/js/Generated/Home/Room.js"></script>
 }
