Finished switching to TypeScript

--- a/WebGame/Views/Home/Player.cshtml
+++ b/WebGame/Views/Home/Player.cshtml
@@ -18,9 +18,9 @@
 
 @section Scripts {
     <script>
-        var roomId = @Model.RoomId;
-        var pregameUrl = '@Model.PregameUrl';
-        var gameStartedUrl = '@Url.Action("GameStarted", "Home" )';
+        const roomId = @Model.RoomId;
+        const pregameUrl = '@Model.PregameUrl';
+        const gameStartedUrl = '@Url.Action("GameStarted", "Home" )';
     </script>
     <script src="~/js/Generated/Home/Player.js"></script>
 }
