--- a/WebGame/Views/Home/Room.cshtml
+++ b/WebGame/Views/Home/Room.cshtml
@@ -13,7 +13,9 @@
 
 @section Scripts {
     <script>
-        var qrUrl = '@Model.QrUrl';
+        const qrUrl = '@Model.QrUrl';
+        const pregameUrl = '@Model.PregameUrl';
+        const gameStartedUrl = '@Url.Action("GameStarted", "Home" )';
     </script>
     <script src="~/lib/qrcode-generator/qrcode.min.js"></script>
     <script src="~/js/Generated/Home/Room.js"></script>
